# crepuscolo

./: README.md  crepuscolo.cabal
src/: Crepuscolo.hs  highlight.hs  recognize.hs
src/Crepuscolo/: DSL.hs  Highlight.hs  Recognize.hs
src/Crepuscolo/Highlight/: DSL.hs
src/Crepuscolo/Highlighter/: C.hs  Plain.hs
src/Crepuscolo/Recognize/: DSL.hs
src/Crepuscolo/Recognizer/: C.hs  CXX.hs  Ruby.hs
