Name:           crepuscolo
Version:        0.0.1
Description:    Syntax highlighting library.
License:        LGPL
License-file:   LICENSE
Author:         meh.
Maintainer:     meh@schizofreni.co
Homepage:       https://github.com/meh/crepuscolo
Build-Type:     Simple
Cabal-Version:  >= 1.10

Executable highlight
  Hs-Source-Dirs: src
  Main-Is:        highlight.hs

  Default-Language: Haskell2010
  Build-Depends:    base >= 4 && < 5,
                    crepuscolo,
                    regex-pcre,
                    filepath

Executable recognize
  Hs-Source-Dirs: src
  Main-Is:        recognize.hs

  Default-Language: Haskell2010
  Build-Depends:    base >= 4 && < 5,
                    crepuscolo,
                    regex-pcre,
                    filepath

Library
  Hs-Source-Dirs:  src
  Exposed-Modules: Crepuscolo.Highlight
                   Crepuscolo.Highlight.DSL
                   Crepuscolo.Highlighter.Plain
                   Crepuscolo.Highlighter.C
                   Crepuscolo.Recognize
                   Crepuscolo.Recognize.DSL
                   Crepuscolo.Recognizer.C
                   Crepuscolo.Recognizer.CXX
                   Crepuscolo.Recognizer.Ruby

  Default-Language: Haskell2010
  Build-Depends:    base >= 4 && < 5,
                    regex-pcre,
                    filepath
